--- a/src/pages/MainPage.scss
+++ b/src/pages/MainPage.scss
@@ -1,3 +1,26 @@
-.MainPage {
-  color: blue;
+.main-page {
+  width: 100%;
+  height: 100%;
+  .header-container {
+    width: 100%;
+    background: linear-gradient(90deg, #5db1c0 0%, #49a78a 100%);
+    .header {
+      margin: 0;
+      padding: 12px;
+      font-size: 16px;
+      text-align: center;
+      color: white;
+    }
+  }
+  .search {
+    width: calc(100% - 84px);
+    font-size: 16px;
+    padding: 12px 42px;
+    border: none;
+    background: url(../assets/search.svg) no-repeat 12px center;
+    background-size: 24px;
+    border-bottom: 1px solid #a4a4a4;
+
+  }
+
 }
